# cci-blackbook-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/cci_blackbook/: chunking.py  embeddings.py  ingest.py  mcp_server.py  pagefilter.py  render.py  service.py  settings.py  sources.py  store.py
deploy/: pangolin.yml
secrets/: cci.env.example
tests/: test_blackbook.py
